--- a/cell02/ex02/parallax.css
+++ b/cell02/ex02/parallax.css
@@ -1,41 +1,37 @@
-body {
-  margin: 0px !important;
-  background-color: #000;
-}
-.container {
-  width: 100%;
+body, html {
+  margin: 0;
+  padding: 0;
   height: 100%;
+  font-family: Arial, sans-serif;
+}
+
+.parallax {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
 }
 
 .first-image {
   background-image: url("https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg");
-  background-size: cover;
-  width: 100%;
-  height: 100vh;
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-h3 {
-  color: #fff;
-}
-
-.content {
-  width: 100%;
-  text-align: center;
-  color: #fff;
-  margin-top: 40vh;
 }
 
 .second-image {
   background-image: url("https://wallpaperset.com/w/full/1/8/e/115868.jpg");
-  background-size: cover;
-  width: 100%;
-  height: 100vh;
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+}
+
+.content {
+  background-color: #000;
+  color: #fff;
+  padding: 100px 20px;
+  text-align: center;
+  font-size: 1.5rem;
 }
